GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    environment: cert-manager
