GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/netbox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    environment: production
    team: web-dev
    networking-zone: frontend
