GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/newt.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newt
  labels:
    environment: newt
    networking-zone: proxy
