GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/openbao.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    environment: openbao
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
