GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/patchmon.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: patchmon
  labels:
    environment: production
    team: web-dev
    networking-zone: frontend
