GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/tracearr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracearr
  labels:
    environment: production
    team: media
    networking-zone: frontend
