GitOps/clusters/cyberhawk-talos-k8s/1-system/namespaces/media.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    environment: media
    team: media
    networking-zone: frontend
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-external-deny-internal
  namespace: media
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "media"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-tracearr-to-tautulli
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: tautulli
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: tracearr
    toPorts:
    - ports:
      - port: "8181"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-newt-to-yamtrack
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: yamtrack
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: newt
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
